[back] add authenticate to room, swagger
